bynkc/tests/fixtures/negative/09_argument_type_mismatch/input.bynk
commons demo {
  fn double(x: Int) -> Int {
    x * 2
  }

  fn caller(s: String) -> Int {
    double(s)
  }
}
